# iced_live_cast

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: frame_construction.rs  frame_handles.rs  frame_processing.rs  gpu_upload.rs  handle_updates.rs
benches/support/: mod.rs
docs/: iced_image_integration_plan.md  upstream_dynamic_raster_api.md
examples/: basic.rs  capture_quality.rs  manual_push.rs  side_by_side.rs  still.rs  video_player_probe.rs  widget_configs.rs
src/: frame.rs  handle.rs  lib.rs  render.rs  widget.rs
src/source/: mod.rs
src/source/display/: mod.rs
src/source/display/backend/: macos.rs  mod.rs  windows.rs
src/source/monitor/: mod.rs
src/source/monitor/backend/: macos.rs  mod.rs  windows.rs
